--- a/index.html
+++ b/index.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Eindopdracht UX</title>
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Barlow&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Hotel</title>
 </head>
+
 <body>
+    <header>
+        <section>
+            <img src="images/hotel-logo.png">
+            <h1>Kazoku Hotel</h1>
+        </section>
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Rooms</a></li>
+                <li><a href="">restaurant</a></li>
+                <li><a href="">Well being</a></li>
+                <li><a href="">Reservatie</a></li>
+                <li><a href="" id="lang"> Taal</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div>
+            <section class="container">
+
+                <h2>"This is the perfect place for you and your family"</h2>
+            </section>
+            <aside id="left">&lt;</aside>
+            <aside id="right">&gt;</aside>
+            <aside id="bottom">
+                <img src="images/bolletjevink.png">
+            </aside>
+            <aside id="rechtsbeneden">
+                <img src="images/plek.png">
+            </aside>
+        </div>
+        <div class="container">
+            <h3>Check availability here</h3>
+            <img src="images/check-in.png" alt="checkin" id="check">
+            <img src="images/room.png" alt="room" id="room">
+            <a href="#" class="button">SEARCH</a>
+        </div>
+
+    </main>
+    <footer>
+        <p>Official Site - All Rights Reserved - Hotel Kazoku - © 2019 Design & production; Delphine Spinnox</p>
+    </footer>
 </body>
+
 </html>
